# mood-minute

./: .gitignore  .sops.yaml  IDENTITY  IDENTITY.yaml  LICENSE  README.md  Taskfile.yml  identity.json  pyproject.toml
dev/: Taskfile.yml
dev/ghost/: Taskfile.yml  values.yml
docs/: DEV_SETUP.md
private/: .gitignore
private/declassified/: 1-hello.md
public/apps/blog/src/: main.py
public/apps/file_server/: identity.json
public/apps/file_server/src/: main.py
public/docs/: DEV_SETUP.md
public/scratches/: SCRATCH1.md  keyboard_test.py  mnemonic_test.py  pyotp_test.py  test-db.json  tinydb_test.py
