[tool.poetry]
name = "ric-sapasap"
version = "0.1.0"
description = ""
authors = ["Ric Janus Sapasap <me@ricjanus.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
markdown = "^3.7"
fastapi = {extras = ["standard"], version = "^0.115.6"}
mnemonic = "^0.21"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
